get characters, get classes, get races working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+#==== connect to mysql ======#
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/pathfinder?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+#==== REST ======#
+server.port=8889
+server.servlet.context-path=/pathfinder
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
