--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compile 'mysql:mysql-connector-java:8.0.21'
 }
+
+plugins {
+  id "org.sonarqube" version "3.2.0"
+}
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "alexandre-thiellin_Pathfinder_API"
+    property "sonar.organization", "alexandre-thiellin-1"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
